# oalex

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE-header.txt  README.md  TODO.md  analysis.cpp  analysis.h  analysis_test.cpp  codegen.cpp  codegen.h  codegen_gen_test.cpp  codegen_run_test.cpp  codegen_test.cpp  codegen_test_util.cpp  codegen_test_util.h  compiler.cpp  compiler.h  compiler_test.cpp  depdot.py  dfa.cpp  dfa.h  dfa_test.cpp  diags_test_util.h  early.cpp  frontend.cpp  frontend.h  frontend_pieces.cpp  frontend_pieces.h  frontend_pieces.oalex  frontend_pieces_test.py  ident.cpp  ident.h  ident_test.cpp  input_view.cpp  input_view.h  input_view_manual.cpp  input_view_manual.h  input_view_manual_test.cpp  (+44 more)
aflfuzzer/: lookahead_regex_fuzz.cpp  lookahead_regex_io_fuzz.cpp  testcrashes.sh
aflfuzzer/tests/: 1.txt  10.bad.txt  11.bad.txt  12.bad.txt  13.txt  14.txt  15.txt  16.bad.txt  17.bad.txt  18.bad.txt  2.txt  20.txt  21.bad.txt  3.txt  4.txt  5.txt  6.txt  7.bad.txt  8.bad.txt  9.bad.txt
archived/: CMakeLists.txt  README.md  dfa.cpp  dfa.h  dfa_test.cpp  early.cpp  input_view.cpp  input_view_auto_forget.cpp  input_view_auto_forget.h  input_view_auto_forget_test.cpp
docs/: 00-intro.md  01-pattern-basics.md
docs/sample_code/: bin_expr.oalex  simple_sum.oalex  simple_sum_test.cpp
runtime/: CMakeLists.txt  README.md  any_of.h  any_of_test.cpp  builtins.cpp  builtins.h  builtins_test.cpp  diags.cpp  diags.h  diags_test_util.cpp  diags_test_util.h  indent.cpp  indent.h  input_view.cpp  input_view.h  input_view_test.cpp  jsonlike.cpp  jsonlike.h  jsonlike_test.cpp  jsonloc.cpp  jsonloc.h  jsonloc_fmt.cpp  jsonloc_fmt.h  jsonloc_test.cpp  lookahead_regex.cpp  lookahead_regex.h  oalex.h  parser_helpers.cpp  parser_helpers.h  parser_helpers_test.cpp  regex.cpp  regex.h  skipper-rationale.md  skipper.cpp  skipper.h  skipper_test.cpp  test_util.cpp  test_util.h  util-impl.cpp  util.h  (+3 more)
testdata/: 1-bad.oalex  1-good.oalex  10-bad.oalex  11-bad.oalex  12-bad.oalex  13-bad.oalex  14-bad.oalex  15-bad.oalex  16-bad.oalex  17-bad.oalex  18-bad.oalex  19-bad.oalex  2-bad.oalex  2-good.oalex  3-bad.oalex  3-good.oalex  4-bad.oalex  5-bad.oalex  6-bad.oalex  7-bad.oalex  8-bad.oalex  9-bad.oalex  README.txt  concat-bad-1.oalex  concat-bad-2.oalex  concat-bad-3.oalex  concat-bad-4.oalex  concat-bad-5.oalex  concat-bad-6.oalex  concat-bad-7.oalex  concat-bad-8.oalex  concat-bad-eol-2.oalex  concat-bad-multidef.oalex  concat-bad-undefined.oalex  concat-good-1.oalex  concat-invalid-ident.oalex  concat-unbraced-tmpl.oalex  contact-line.oalex  custom-errors-bad-repeat.oalex  custom-errors-bad-undefined.oalex  (+133 more)
