cmake_minimum_required(VERSION 3.10)
project(oalex)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
include_directories(${CMAKE_SOURCE_DIR})
enable_testing()

add_executable(lexer_test lexer.cpp lexer_matcher.cpp lexer_test.cpp)
target_link_libraries(lexer_test oalex)
add_test(lexer_test lexer_test)

add_executable(jsonloc_test lexer.cpp jsonloc_test.cpp jsonloc.cpp)
target_link_libraries(jsonloc_test oalex)
add_test(jsonloc_test jsonloc_test)

add_subdirectory(archived)
add_subdirectory(runtime)
